--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 #mennu{
     background-color: grey;
-    border-style: solid;
     font-family: monospace;
     font-size: 7cm;
+}
+a:link{
+    color:black;
+}
+a:visited{
+    color: black;
+}
+#lap{
+    text-align: right;
 }
