--- a/style.css
+++ b/style.css
@@ -19,5 +19,9 @@ h1 {
     font-family: 'Courgette', cursive;
 }
 .golyoszoveg{
-    font-size: 30px;
+    font-size: 50px;
+}
+.lap{
+    float: right;
+    width: 50%;
 }
