Szöveg méret relatívvá tétele

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Coiny', cursive;
 }
 .menu{
-    font-size: 20px;
+    font-size: 1em;
     float: left;
     width: 50%;
 }
@@ -19,7 +19,7 @@ h1 {
     font-family: 'Courgette', cursive;
 }
 .golyoszoveg{
-    font-size: 50px;
+    font-size: 1.35em;
 }
 .lap{
     float: right;
