Leggyakoribb számokban a golyók méretének csökkentése ahogyan annak lennie kell, ugye Sauher ;))))))

--- a/style.css
+++ b/style.css
@@ -34,3 +34,18 @@ h1 {
   background-size:27.35em;
     background-image: url(https://github.com/green-fox-academy/http-info-syllabus/blob/master/assets/hatter.jpg?raw=true);
 }
+
+#leggyakoribb1 {
+    width: 220px;
+    height: 220px;
+}
+
+#leggyakoribb2 {
+    width: 220px;
+    height: 220px;
+}
+
+#leggyakoribb3 {
+    width: 220px;
+    height: 220px;
+}
