--- a/style.css
+++ b/style.css
@@ -35,18 +35,7 @@ h1 {
     background-image: url(https://github.com/green-fox-academy/http-info-syllabus/blob/master/assets/hatter.jpg?raw=true);
 }
 
-#leggyakoribb1 {
+#golyo {
     width: 33px;
     height: 33px;
 }
-
-#leggyakoribb2 {
-    width: 33px;
-    height: 33px;
-}
-
-#leggyakoribb3 {
-    width: 33px;
-    height: 33px;
-}
-
