Id átírása classra, hogy kicsi legyen

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
     background-image: url(https://github.com/green-fox-academy/http-info-syllabus/blob/master/assets/hatter.jpg?raw=true);
 }
 
-#golyo {
+.golyo {
     width: 33px;
     height: 33px;
 }
