--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ ul li:last-child{
     border-bottom: none
 }
 ul {
-    border-radius: 15px;
+  border-radius: 15px;
+  list-style-type:none;
 
 }
 
@@ -27,7 +28,7 @@ h1 {
     font-family: 'Courgette', cursive;
 }
 .golyoszoveg{
-    font-size: 1.35em;
+    font-size: 2.5em;
 }
 .lap{
     float: right;
@@ -42,6 +43,6 @@ h1 {
 }
 
 .golyo {
-    width: 33px;
-    height: 33px;
+    width: 65px;
+    height: 65px;
 }
