--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ ul li:last-child{
     float: left;
     background-color: rgb(78, 78, 78);
     width: 300px;
-    height: 800px;
+    height: 700px;
 }
 h1 {
     font-family: 'Courgette', cursive;
@@ -57,3 +57,11 @@ h1 {
     width: 65px;
     height: 65px;
 }
+
+.tortenet {
+    border-left-style: solid;
+    border-width:5px;
+    padding-left: 1.6%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
