--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul li:last-child{
 }
 h1 {
     font-family: 'Courgette', cursive;
-    text-indent: 40px;
+    margin-left: 345px;
 }
 .golyoszoveg{
     font-size: 2.5em;
