--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Coiny', cursive;
+    margin:0px;
 }
 a:link{
     text-decoration: none;
@@ -25,7 +26,7 @@ ul{
 }
 
 ul li:last-child{
-    border-bottom: none
+    border-bottom: none;
 }
 .ul, a {
     color: rgb(255, 255, 255);
@@ -34,7 +35,7 @@ ul li:last-child{
     float: left;
     background-color: rgb(78, 78, 78);
     width: 300px;
-    height: 765px;
+    height: 892px;
 }
 h1 {
     font-family: 'Courgette', cursive;
