--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{
-    font-family: 'Coiny', cursive;
+    font-family: 'Cormorant Garamond', serif;
     margin:0px;
+    font-weight: bolder;
 }
-a:link{
+a:link,a:visited{
     text-decoration: none;
 }
 a:hover{
@@ -21,6 +22,8 @@ li {
     border-bottom-style: groove;
 }
 ul{
+    font-size: 20px;
+    font-weight: bold;
     text-indent: 9px;
     padding-left: 0px;
 }
@@ -38,11 +41,14 @@ ul li:last-child{
     height: 892px;
 }
 h1 {
-    font-family: 'Courgette', cursive;
+    font-family: 'Abril Fatface', cursive;
+    font-weight: 900;
     margin-left: 345px;
+    font-weight: bolder;
+    font-size: 2.5em;
 }
 .golyoszoveg{
-    font-size: 2.5em;
+    font-size: 2em;
     text-indent: 40px;
 }
 .lap{
