--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 }
 .golyoszoveg{
     font-size: 2em;
-    text-indent: 40px;
+    text-indent: 50px;
 }
 .lap{
     width: 70%;
@@ -77,4 +77,7 @@ h1 {
   }
   .kkics{
     width: 100px;
+  }
+  #behuzas{
+    text-indent: 50px;
   }
